tests/should_succeed/double_assignment.jou
cdecl printf(format: byte*, ...) -> int

def main() -> int:
    x = y = 7
    printf("%d %d\n", x, y)  # Output: 7 7

    x = (y = 11)
    printf("%d %d\n", x, y)  # Output: 11 11

    return 0
