tests/syntax_error/keyword_int32.jou
def main() -> int:
    int32 = 1  # Error: expected an expression, got the 'int32' keyword
    return 0
